# custom_allocator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: basic_arena.hpp.E32F44CA3800103E.idx  main.cpp.F3BAF2ACBBC405D9.idx  utils.cpp.B15B58FEE329141D.idx  utils.hpp.7117F825A1F0AE27.idx
include/custom_alloc/: basic_arena.hpp
src/: main.cpp
